@@ -35,63 +35,7 @@
 
 include ${TOPDIR}/.config
 include ${TOPDIR}/tools/Config.mk
-
-# Setup for the selected toolchain
-
-ifeq ($(CONFIG_STM32_CODESOURCERYW),y)
-  # CodeSourcery under Windows
-  CROSSDEV = arm-none-eabi-
-  ARCROSSDEV = arm-none-eabi-
-  WINTOOL = y
-  ARCHCPUFLAGS = -mcpu=cortex-m3 -mthumb -mfloat-abi=soft
-endif
-ifeq ($(CONFIG_STM32_CODESOURCERYL),y)
-  # CodeSourcery under Linux
-  CROSSDEV = arm-none-eabi-
-  ARCROSSDEV = arm-none-eabi-
-  ARCHCPUFLAGS = -mcpu=cortex-m3 -mthumb -mfloat-abi=soft
-  MAXOPTIMIZATION = -O2
-endif
-ifeq ($(CONFIG_STM32_ATOLLIC_LITE),y)
-  # Atollic toolchain under Windows
-  CROSSDEV = arm-atollic-eabi-
-  ARCROSSDEV =
-  WINTOOL = y
-  ARCHCPUFLAGS = -mcpu=cortex-m3 -mthumb -mfloat-abi=soft
-endif
-ifeq ($(CONFIG_STM32_ATOLLIC_PRO),y)
-  # Atollic toolchain under Windows
-  CROSSDEV = arm-atollic-eabi-
-  ARCROSSDEV = arm-atollic-eabi-
-  WINTOOL = y
-  ARCHCPUFLAGS = -mcpu=cortex-m3 -mthumb -mfloat-abi=soft
-endif
-ifeq ($(CONFIG_STM32_DEVKITARM),y)
-  # devkitARM under Windows
-  CROSSDEV = arm-eabi-
-  ARCROSSDEV = arm-eabi-
-  WINTOOL = y
-  ARCHCPUFLAGS = -mcpu=cortex-m3 -mthumb -mfloat-abi=soft
-endif
-ifeq ($(CONFIG_STM32_RAISONANCE),y)
-  # Raisonance RIDE7 under Windows
-  CROSSDEV = arm-none-eabi-
-  ARCROSSDEV = arm-none-eabi-
-  WINTOOL = y
-  ARCHCPUFLAGS = -mcpu=cortex-m3 -mthumb -mfloat-abi=soft
-endif
-ifeq ($(CONFIG_STM32_BUILDROOT),y)
-  # NuttX buildroot under Linux or Cygwin
-  # OABI
-  # CROSSDEV = arm-nuttx-elf-
-  # ARCROSSDEV = arm-nuttx-elf-
-  # ARCHCPUFLAGS = -mtune=cortex-m3 -march=armv7-m -mfloat-abi=soft
-  # EABI
-  CROSSDEV = arm-nuttx-eabi-
-  ARCROSSDEV = arm-nuttx-eabi-
-  ARCHCPUFLAGS = -mcpu=cortex-m3 -mthumb -mfloat-abi=soft
-  MAXOPTIMIZATION = -Os
-endif
+include ${TOPDIR}/arch/arm/src/armv7-m/Toolchain.defs
 
 # Pick the linker script
 
